--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Happy New Year</title>
     <link rel="stylesheet" href="./postcard.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
