Added meta tags

--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Happy New Year</title>
+    <title>Kunin's New Year postcard</title>
     <link rel="stylesheet" href="./postcard.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:title" content="Новогодняя открытка от Куниных">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://dkunin.github.io/new-year-postcard/">
+    <meta property="og:site_name" content="Kunin's New Year postcard">
+    <meta property="og:description" content="Новогодняя открытка от Куниных">
 </head>
 
 <body>
